# SimulacaoLinhaProducao

./: .gitignore  .~lock.Planilha parametros.ods#  README.md  cppBasic.cpp  exemplo_entrada1.txt
src/: CMakeLists.txt  TAD.cpp  artesao.cpp  artesao.h  atividade.cpp  atividade.h  config.cfg  especialista.cpp  exec.sh  fila.cpp  input.cpp  main.cpp  makefile  simulacao.cpp  triangular.cpp  vaso.cpp
src/cmake/: FindSimulation_DUDU.cmake
src/confs/: config0.cfg  config1.cfg  config10.cfg  config11.cfg  config12.cfg  config13.cfg  config14.cfg  config15.cfg  config16.cfg  config17.cfg  config18.cfg  config19.cfg  config2.cfg  config20.cfg  config21.cfg  config22.cfg  config23.cfg  config24.cfg  config25.cfg  config26.cfg  config27.cfg  config28.cfg  config29.cfg  config3.cfg  config30.cfg  config31.cfg  config32.cfg  config33.cfg  config34.cfg  config35.cfg  config36.cfg  config37.cfg  config38.cfg  config39.cfg  config4.cfg  config40.cfg  config41.cfg  config42.cfg  config43.cfg  config44.cfg  (+60 more)
src/include/: TAD.h  artesao.h  atividade.h  especialista.h  fila.h  input.h  main.h  simulacao.h  triangular.h  vaso.h
src/res/: resultados0.rs  resultados1.rs  resultados10.rs  resultados11.rs  resultados12.rs  resultados13.rs  resultados14.rs  resultados15.rs  resultados16.rs  resultados17.rs  resultados18.rs  resultados19.rs  resultados2.rs  resultados20.rs  resultados21.rs  resultados22.rs  resultados23.rs  resultados24.rs  resultados25.rs  resultados26.rs  resultados27.rs  resultados28.rs  resultados29.rs  resultados3.rs  resultados30.rs  resultados31.rs  resultados32.rs  (+73 more)
(+29 files in other folders)
